Tue Aug 21 09:36:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/interface.idl:
          Added a new test case

        * testsHello/run_test.pl:
        * tests/No_Server_MT_Connect_Test/run_test.pl:
          Put iorbase filename into a perl variable

        * tests/POA/Default_Servant2/run_test.pl:
        * tests/Exposed_Policies/run_test.pl:
          Extended timeout for slow systems

Mon Aug 20 15:57:00 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/old_union2.idl:
        * tests/IDL_Test/old_struct.idl:
        * tests/IDL_Test/dif2.idl:
        * tests/IDL_Test/module.idl:
        * tests/IDL_Test/inherit.idl:
        * tests/IDL_Test/old_constants.idl:
        * tests/IDL_Test/simple2.idl:
        * tests/IDL_Test/old_array.idl:
        * tests/IDL_Test/old_union.idl:
        * tests/IDL_Test/simple.idl:
        * tests/IDL_Test/primtypes.idl:
        * tests/IDL_Test/old_sequence.idl:

          Added file description comments and fixed formatting.

Mon Aug 20 15:06:33 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/interface.idl:

          Cosmetic changes.

        * tests/IDL_Test/IDL_Test.mpc:

          Added moved files below to the MPC project.

        * tests/IDL_Test/old_union2.idl:
        * tests/IDL_Test/old_struct.idl:
        * tests/IDL_Test/dif2.idl:
        * tests/IDL_Test/module.idl:
        * tests/IDL_Test/inherit.idl:
        * tests/IDL_Test/old_constants.idl:
        * tests/IDL_Test/simple2.idl:
        * tests/IDL_Test/old_array.idl:
        * tests/IDL_Test/old_union.idl:
        * tests/IDL_Test/simple.idl:
        * tests/IDL_Test/primtypes.idl:
        * tests/IDL_Test/old_sequence.idl:

          File moved from TAO_IDL/idl_specs. In some cases, there
          was a name clash with existing IDL files, so 'old_' was
          prepended to those filenames of the moved files. These